[package]
name = "compilisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
lazy_static = "1.4.0"
llvm-sys = "140.0.5"
regex = "1"
