[package]
name = "compilisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
lalrpop = "0.20"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
lalrpop-util = { version = "0.20", features = ["lexer"] }
lazy_static = "1.4.0"
llvm-sys = "140.0.5"
regex = "1"
